Fix SimulateUserActivity not working for a second when resuming from ram/disk.

The problem is in krunner/lock/lockprocess.cc, LockProcess::lock(...),
lines:

mBusy = true;
...
QTimer::singleShot(1000, this, SLOT(slotDeadTimePassed()));

The "dead-time" makes LockProcess ignores any SimulateUserActivity
requests during that one second-time.
I have added "mInitialLock = true" in LockProcess::signalPipeSignal() to
simulate the "--showunlock" parameter after the one second-time.

BUG: 269737
FIXED-IN: 4.6.3